--- a/planetary-plasma/package.json
+++ b/planetary-plasma/package.json
@@ -14,6 +14,7 @@
     "@astrojs/svelte": "^5.4.0",
     "astro": "^4.8.6",
     "svelte": "^4.2.17",
+    "tslib": "^2.6.2",
     "typescript": "^5.4.5"
   }
 }
