--- a/receptive-ring/package.json
+++ b/receptive-ring/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "planetary-plasma",
+  "name": "receptive-ring",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,10 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
     "@astrojs/svelte": "^5.4.0",
     "astro": "^4.8.6",
-    "svelte": "^4.2.17",
+    "svelte": "^4.2.16",
+    "@astrojs/check": "^0.7.0",
     "typescript": "^5.4.5"
   }
 }
